--- a/movie-analyst-api/Dockerfile
+++ b/movie-analyst-api/Dockerfile
@@ -2,11 +2,11 @@ FROM node:latest
 
 COPY . .
 
-ENV DB_HOST=${DB_HOST}
+ENV DB_HOST=172.17.0.2
 
 ENV DB_USER=root
 
-ENV DB_PASS=dale
+ENV DB_PASS=brasil
 
 ENV DB_NAME=movie_db
 
