--- a/docker-compose/.env
+++ b/docker-compose/.env
@@ -4,5 +4,5 @@ DB_PASS=internship
 DB_NAME=movie_db
 IMAGE_API=elielbloemer/image-api:1.0
 IMAGE_UI=elielbloemer/image-ui:1.0
-BACKEND_URL=192.168.63.131:3000
+BACKEND_URL=
 
